[gd_scene load_steps=7 format=3 uid="uid://3gsem80abifn"]

[ext_resource type="FontFile" uid="uid://cstcjqrqa2oe1" path="res://Fonts/DarumadropOne-Regular.ttf" id="1_bj1uy"]
[ext_resource type="Texture2D" uid="uid://pmmw7yic8186" path="res://Fondos/prueba_fondo.png" id="1_ul6ys"]
[ext_resource type="Script" uid="uid://7avlqe3u305i" path="res://v_box_container.gd" id="2_ul6ys"]
[ext_resource type="Texture2D" uid="uid://0hi2rq2rn4e8" path="res://textures/star.png" id="4_ns3he"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ns3he"]
texture = ExtResource("1_ul6ys")
modulate_color = Color(0.720467, 0.720468, 0.720467, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fa1tu"]

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ns3he")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -86.0
offset_top = -275.0
offset_right = 86.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10
script = ExtResource("2_ul6ys")

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_focus_color = Color(0.892168, 0.640858, 3.85046e-07, 1)
theme_override_colors/font_pressed_color = Color(0.892329, 0.612657, 3.85046e-07, 1)
theme_override_constants/outline_size = 0
theme_override_constants/icon_max_width = 30
theme_override_constants/align_to_largest_stylebox = 0
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("1_bj1uy")
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxTexture_fa1tu")
text = "Nueva partida"
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -22.5
offset_right = 135.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 180

[node name="StarLeft" type="TextureRect" parent="VBoxContainer/Button/HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("4_ns3he")
expand_mode = 3

[node name="StarRight" type="TextureRect" parent="VBoxContainer/Button/HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("4_ns3he")
expand_mode = 3

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 0
theme_override_constants/icon_max_width = 0
theme_override_constants/align_to_largest_stylebox = 0
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("1_bj1uy")
theme_override_font_sizes/font_size = 26
text = "Continuar"
flat = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/Button2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -79.5
offset_right = 135.0
offset_bottom = -34.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 180

[node name="StarLeft" type="TextureRect" parent="VBoxContainer/Button2/HBoxContainer2"]
visible = false
layout_mode = 2
texture = ExtResource("4_ns3he")
expand_mode = 3

[node name="StarRight" type="TextureRect" parent="VBoxContainer/Button2/HBoxContainer2"]
visible = false
layout_mode = 2
texture = ExtResource("4_ns3he")
expand_mode = 3

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 0
theme_override_constants/icon_max_width = 0
theme_override_constants/align_to_largest_stylebox = 0
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("1_bj1uy")
theme_override_font_sizes/font_size = 26
text = "Coleccionista"
flat = true

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/Button3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -136.5
offset_right = 135.0
offset_bottom = -91.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 180

[node name="StarLeft" type="TextureRect" parent="VBoxContainer/Button3/HBoxContainer3"]
visible = false
layout_mode = 2
texture = ExtResource("4_ns3he")
expand_mode = 3

[node name="StarRight" type="TextureRect" parent="VBoxContainer/Button3/HBoxContainer3"]
visible = false
layout_mode = 2
texture = ExtResource("4_ns3he")
expand_mode = 3

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 0
theme_override_constants/icon_max_width = 0
theme_override_constants/align_to_largest_stylebox = 0
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("1_bj1uy")
theme_override_font_sizes/font_size = 26
text = "Ajustes"
flat = true

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/Button4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -193.5
offset_right = 135.0
offset_bottom = -148.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 180

[node name="StarLeft" type="TextureRect" parent="VBoxContainer/Button4/HBoxContainer4"]
visible = false
layout_mode = 2
texture = ExtResource("4_ns3he")
expand_mode = 3

[node name="StarRight" type="TextureRect" parent="VBoxContainer/Button4/HBoxContainer4"]
visible = false
layout_mode = 2
texture = ExtResource("4_ns3he")
expand_mode = 3

[node name="Button5" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 0
theme_override_constants/icon_max_width = 0
theme_override_constants/align_to_largest_stylebox = 0
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("1_bj1uy")
theme_override_font_sizes/font_size = 26
text = "Salir"
flat = true

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer/Button5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -250.5
offset_right = 135.0
offset_bottom = -205.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 180

[node name="StarLeft" type="TextureRect" parent="VBoxContainer/Button5/HBoxContainer5"]
visible = false
layout_mode = 2
texture = ExtResource("4_ns3he")
expand_mode = 3

[node name="StarRight" type="TextureRect" parent="VBoxContainer/Button5/HBoxContainer5"]
visible = false
layout_mode = 2
texture = ExtResource("4_ns3he")
expand_mode = 3
